// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert base demo works fine 1`] = `
<div
  class="tdesign-demo-block"
>
  <div
    class="t-alert t-alert--success"
  >
    <div
      class="t-alert__icon"
    >
      <svg
        class="t-icon t-icon-check-circle-filled"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-alert__content"
    >
      <!---->
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          这是一条成功的消息提示
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <!---->
  </div>
  <div
    class="t-alert t-alert--info"
  >
    <div
      class="t-alert__icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-alert__content"
    >
      <!---->
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          <div>
            这是一条普通的消息提示
          </div>
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <!---->
  </div>
  <div
    class="t-alert t-alert--warning"
  >
    <div
      class="t-alert__icon"
    >
      <svg
        class="t-icon t-icon-error-circle-filled"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M15 8A7 7 0 101 8a7 7 0 0014 0zM8.5 4v5.5h-1V4h1zm-1.1 7h1.2v1.2H7.4V11z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-alert__content"
    >
      <!---->
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          
           这是一条警示信息 
          
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <!---->
  </div>
  <div
    class="t-alert t-alert--error"
  >
    <div
      class="t-alert__icon"
    >
      <svg
        class="t-icon t-icon-error-circle-filled"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M15 8A7 7 0 101 8a7 7 0 0014 0zM8.5 4v5.5h-1V4h1zm-1.1 7h1.2v1.2H7.4V11z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-alert__content"
    >
      <!---->
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          
           高危操作/出错信息提示 
          
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <!---->
  </div>
</div>
`;

exports[`Alert close demo works fine 1`] = `
<div
  class="tdesign-demo-block"
>
  <div
    class="t-alert t-alert--success"
  >
    <div
      class="t-alert__icon"
    >
      <svg
        class="t-icon t-icon-check-circle-filled"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-alert__content"
    >
      <!---->
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          这是一条成功的消息提示
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <!---->
  </div>
  <div
    class="t-alert t-alert--info"
  >
    <div
      class="t-alert__icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-alert__content"
    >
      <!---->
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          这是一条普通的消息提示
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <div
      class="t-alert__close"
    >
      知道了
    </div>
  </div>
  <div
    class="t-alert t-alert--warning"
  >
    <div
      class="t-alert__icon"
    >
      <svg
        class="t-icon t-icon-error-circle-filled"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M15 8A7 7 0 101 8a7 7 0 0014 0zM8.5 4v5.5h-1V4h1zm-1.1 7h1.2v1.2H7.4V11z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-alert__content"
    >
      <!---->
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          这是一条警示信息
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <div
      class="t-alert__close"
    >
      FunctionPropClose
    </div>
  </div>
  <div
    class="t-alert t-alert--error"
  >
    <div
      class="t-alert__icon"
    >
      <svg
        class="t-icon t-icon-error-circle-filled"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M15 8A7 7 0 101 8a7 7 0 0014 0zM8.5 4v5.5h-1V4h1zm-1.1 7h1.2v1.2H7.4V11z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-alert__content"
    >
      <!---->
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          高危操作/出错信息提示
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <div
      class="t-alert__close"
    >
       Slot Close 
    </div>
  </div>
</div>
`;

exports[`Alert collapse demo works fine 1`] = `
<div
  class="tdesign-demo-block"
>
  <div
    class="t-alert t-alert--info"
  >
    <div
      class="t-alert__icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-alert__content"
    >
      <!---->
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          
          <div>
            <span>
              这是折叠的第一条消息
            </span>
          </div>
          <div>
            <span>
              这是折叠的第二条消息
            </span>
          </div>
          
          <div
            class="t-alert__collapse"
          >
            展开全部
          </div>
        </div>
        <!---->
      </div>
    </div>
    <!---->
  </div>
</div>
`;

exports[`Alert icon demo works fine 1`] = `
<div
  class="tdesign-demo-block"
>
  <div
    class="t-alert t-alert--success"
  >
    <div
      class="t-alert__icon"
    >
      <svg
        class="t-icon t-icon-check-circle-filled"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-alert__content"
    >
      <!---->
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          这是一条成功的消息提示
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <!---->
  </div>
  <div
    class="t-alert t-alert--info"
  >
    <div
      class="t-alert__icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-alert__content"
    >
      <!---->
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          这是一条普通的消息提示
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <!---->
  </div>
  <div
    class="t-alert t-alert--warning"
  >
    <div
      class="t-alert__icon"
    >
      <svg
        class="t-icon t-icon-error-circle-filled"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M15 8A7 7 0 101 8a7 7 0 0014 0zM8.5 4v5.5h-1V4h1zm-1.1 7h1.2v1.2H7.4V11z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-alert__content"
    >
      <!---->
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          这是一条警示消息提示
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <!---->
  </div>
  <div
    class="t-alert t-alert--error"
  >
    <div
      class="t-alert__icon"
    >
      <svg
        class="t-icon t-icon-error-circle-filled"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M15 8A7 7 0 101 8a7 7 0 0014 0zM8.5 4v5.5h-1V4h1zm-1.1 7h1.2v1.2H7.4V11z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-alert__content"
    >
      <!---->
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          高危操作/出错信息提示
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <!---->
  </div>
  <div
    class="t-alert t-alert--warning"
  >
    <div
      class="t-alert__icon"
    >
      <svg
        class="t-icon t-icon-error-circle-filled"
      >
        <use
          href="#t-icon-error-circle-filled"
        />
      </svg>
    </div>
    <div
      class="t-alert__content"
    >
      <!---->
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          这是一条警示信息(以function形式自定义icon)
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <!---->
  </div>
  <div
    class="t-alert t-alert--error"
  >
    <div
      class="t-alert__icon"
    >
      <svg
        class="t-icon t-icon-error-circle-filled"
      >
        <use
          href="#t-icon-error-circle-filled"
        />
      </svg>
    </div>
    <div
      class="t-alert__content"
    >
      <!---->
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          高危操作/出错信息提示(以slot形式自定义icon)
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <!---->
  </div>
</div>
`;

exports[`Alert operation demo works fine 1`] = `
<div
  class="tdesign-demo-block"
>
  <div
    class="t-alert t-alert--info"
  >
    <div
      class="t-alert__icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-alert__content"
    >
      <!---->
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          这是一条普通的消息提示
          <!---->
        </div>
        <div
          class="t-alert__operation"
        >
          
          <span>
            相关操作
          </span>
          
        </div>
      </div>
    </div>
    <!---->
  </div>
</div>
`;

exports[`Alert title demo works fine 1`] = `
<div
  class="tdesign-demo-block"
>
  <div
    class="t-alert t-alert--info"
  >
    <div
      class="t-alert__icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-alert__content"
    >
      <div
        class="t-alert__title"
      >
         
        这是一条普通的消息提示
      </div>
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          这是与普通的消息提示相关的文字辅助说明
          <!---->
        </div>
        <div
          class="t-alert__operation"
        >
          
          <span>
            相关操作
          </span>
          
        </div>
      </div>
    </div>
    <!---->
  </div>
</div>
`;
